Get device hardware info

--- a/core/Makefile
+++ b/core/Makefile
@@ -258,6 +258,13 @@ endif
 			TARGET_CPU_ABI2="$(TARGET_CPU_ABI2)" \
 			TARGET_AAPT_CHARACTERISTICS="$(TARGET_AAPT_CHARACTERISTICS)" \
 			TARGET_UNIFIED_DEVICE="$(TARGET_UNIFIED_DEVICE)" \
+			PRODUCT_CHIPSET="$(PRODUCT_CHIPSET)" \
+			PRODUCT_GPU="$(PRODUCT_GPU)" \
+			PRODUCT_FRONT_CAM="$(PRODUCT_FRONT_CAM)" \
+			PRODUCT_REAR_CAM="$(PRODUCT_REAR_CAM)" \
+			PRODUCT_SCREEN_RES="$(PRODUCT_SCREEN_RES)" \
+			PRODUCT_SCREEN_SIZE="$(PRODUCT_SCREEN_SIZE)" \
+			PRODUCT_CPU="$(PRODUCT_CPU)" \
 			$(PRODUCT_BUILD_PROP_OVERRIDES) \
 	        bash $(BUILDINFO_SH) >> $@
 	$(hide) $(foreach file,$(system_prop_file), \
